...
      {/* Detail: My Requests List */}
      <Stack.Screen
        name="PruningMyRequests"
        component={MyRequestsScreen}
        options={{
          title: 'Permohonan Saya',
          headerBackTitle: 'Kembali',
        }}
      />

      {/* Detail: Request Details */}
      <Stack.Screen
        name="PruningDetail"
...
